--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
     <div>
         <ul class="navbar-nav ">
             <li class="nav-item">
-                <a class="nav-link" href="#about">English version Here!
-                </a>
+                <a class="nav-link" href="#about">Version française ici!</a>
             </li>
         </ul>
     </div>
