[EN][Index] traduced some part of the index

--- a/en/index.html
+++ b/en/index.html
@@ -37,23 +37,23 @@
     <div class="collapse navbar-collapse navbar-expand-lg  justify-content-center mx-auto order-0" id="navbarNavDropdown">
         <ul class="navbar-nav" style="margin-left:10%">
             <li class="nav-item ">
-                <a class="nav-link" href="#about">A propos
+                <a class="nav-link" href="#about">About
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#experiences">Experiences</a>
+                <a class="nav-link" href="#experiences">Work Experience</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#formation">Formation</a>
+                <a class="nav-link" href="#formation">Education</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#skills">Compétences</a>
+                <a class="nav-link" href="#skills">Skills</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#langues">Langues</a>
+                <a class="nav-link" href="#langues">Languages</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#projects">Projets</a>
+                <a class="nav-link" href="#projects">Projects</a>
             </li>
             </ul>
     </div>
@@ -93,13 +93,13 @@
 
                         <ul style="font-size:3vh">
                             <li>
-                                21 Ans
+                                21 years old
                             </li>
                             <li>
-                                Nationnalité Française
+                                French citizen
                             </li>
                             <li>
-                                Permis B
+                                Driving license (B)
                             </li>
                         </ul>
                         <a href="https://www.linkedin.com/in/itsanas/" class="btn btn-dark btn-lg btn-circle" style="margin-right:30px;">
@@ -193,7 +193,7 @@
     <hr>
 
     <div class="container" id="experiences">
-        <h1 class="display-3">Experience</h1>
+        <h1 class="display-3">Work Experience</h1>
     </div>
 
     <div class="container">
@@ -201,7 +201,7 @@
             <div class="card shadover">
 
                 <div class="card-body">
-                    <h4 class="card-title">2017 - Stagiaire été</h4>
+                    <h4 class="card-title">2017 - Summer internship</h4>
                     <p class="card-text">Ma mission était de constituer un logiciel d'aide à la maintenance des rames en Python et en totale autonomie.</p>
                     <div id="job1" class="collapse">
                         <p>Réalisation d’un logiciel d’aide à la maintenance en totale autonomie en langage Python 3. Le logiciel
