[EN] Traduced a lot of texts

--- a/en/index.html
+++ b/en/index.html
@@ -80,15 +80,15 @@
                         <img src="Ressources/images/profile-pic.jpg" class="profile-pic img-fluid">
                     </div>
                     <div class="col-lg-8">
-                        <div class="container">
+                        <div class="container" align="center">
                             <h1 class="display-1 big-text">
                                 Anas
                                 <span style="color:brown">El Halouani</span>
                             </h1>
                         </div>
                         <p class="lead">
-                            Actuellement en 3ème année d'école d'ingenieur en Informatique au sein de l'EPITA, je m'interesse énormement aux nouvelles
-                            technologies, à l'art et au sport.
+                            Fascinated by computers since my youngest age, I acquired strong knowledge thanks to my school, 
+                            my personal projects or competitions in which I participated. Outside of school, I like drawing and I regularly train for the half-marathon
                         </p>
 
                         <ul style="font-size:3vh">
@@ -143,9 +143,6 @@
         </div>
     </div>
 -->
-
-
-
     <!-- 
     <div class="container animated bounceInRight">
         <div class="timeline">
@@ -201,13 +198,15 @@
             <div class="card shadover">
 
                 <div class="card-body">
-                    <h4 class="card-title">2017 - Summer internship</h4>
-                    <p class="card-text">Ma mission était de constituer un logiciel d'aide à la maintenance des rames en Python et en totale autonomie.</p>
+                    <h4 class="card-title">2017 - Software Developer</h4>
+                    <p class="card-text">
+                        My mission was to create a software which will help in the maintenance of the new trains in Python and in full autonomy
+                    </p>
                     <div id="job1" class="collapse">
-                        <p>Réalisation d’un logiciel d’aide à la maintenance en totale autonomie en langage Python 3. Le logiciel
-                            réalisé exploite un tableau (.csv), effectue tous les calculs nécessaires sur le volume d’huile
-                            et indique quelle décision prendre à l’utilisateur concernant l'état de chaque rame sur une interface
-                            graphique.
+                        <p>
+                            Realization of a help software for the maintenance of trains in full autonomy with Python 3. The software
+                            takes an array (.csv) as an input, makes all the necessary calculations on the volume of oil
+                            and indicates to the user which decision he should take depending on the state of every part of the train on a graphical interface.
                         </p>
                     </div>
                     <img src="https://www.sncf.com/themes/contrib/sncf_theme/node_modules/sncf-styleguide-reloaded/dist/build/img/logo-sncf.svg?v=1728074379"
@@ -221,14 +220,14 @@
         <a data-toggle="collapse" data-target="#job">
             <div class="card shadover">
                 <div class="card-body">
-                    <h4 class="card-title">2012 - Stage de découverte</h4>
-                    <p class="card-text">Stage de découverte du monde de l'entreprise.</p>
+                    <h4 class="card-title">2012 - Discovery intership</h4>
+                    <p class="card-text">Internship to discover the business world</p>
                     <div id="job" class="collapse">
-                        <p>Quelques tâches basiques ont été effectués:
+                        <p>A few basic tasks were done:
                             <ul>
-                                <li>Trie de documents </li>
-                                <li>Ecoute d'appels dans un Call Center </li>
-                                <li> Rédaction de lettres pour les actionnaires </li>
+                                <li>Sorting documents</li>
+                                <li>Listening call in a Call Center</li>
+                                <li>Writing letters for shareholders</li>
                             </ul>
                         </p>
                     </div>
@@ -242,22 +241,19 @@
     <hr>
 
     <div class="container" id="formation">
-        <h1 class="display-3">Formation</h1>
+        <h1 class="display-3">Education</h1>
     </div>
 
     <div class="container">
         <a data-toggle="collapse" data-target="#school1">
             <div class="card shadover">
-
                 <div class="card-body">
-                    <h4 class="card-title">En cours - Ecole d'ingenieur en informatique</h4>
-                    <p class="card-text">Formation d'ingénieur de 5 ans avec 2 ans de prépa intégré.</p>
+                    <h4 class="card-title">Currently - EPITA</h4>
+                    <p class="card-text">Engineering school in 5 years</p>
                     <div id="school1" class="collapse">
-                        <p>Actuellement en formation au sein de l'EPITA, je participe pleinement à la vie active de l'école
-                            grâce aux associations tout en travaillant sur les projets scolaires qui me sont donnés. J'ai
-                            été membre du club de basket de l'école ainsi que responsable court-métrage mais cela ne m'a
-                            pas emêcher de réaliser les projets scolaires dont l'un d'eux sélectionné par le jury pour représenter
-                            l'école lors d’événements.
+                        <p>
+                            Actually in EPITA, I actively participe in the association life while working seriously on school and personnal projects.
+                            I am mainly in two associations which are the sport club of EPITA and the photography club.
                         </p>
                     </div>
                     <img src="http://blogs.ionis-group.com/epita/media/epita_nouveau_logo_identite_visuelle_innovation_ecole_informatique_30ans_01.jpg"
