[EN] traduced most of texts

--- a/en/index.html
+++ b/en/index.html
@@ -268,11 +268,11 @@
             <div class="card shadover">
 
                 <div class="card-body">
-                    <h4 class="card-title">2015 - Baccalauréat scientifique mention AB</h4>
-                    <p class="card-text">Bac S spécialité Mathématiques avec option Art Plastique.</p>
+                    <h4 class="card-title">2015 - High School Diploma in Sciences</h4>
+                    <p class="card-text">High school diploma in sciences with mathematics speciality and art options.</p>
                     <div id="school" class="collapse">
-                        <p>J'ai effectué mes années de lycée au lycée George Sand de Domont en pratiquant de la natation, des
-                            cours de guitares et d'histoire des arts dans mon temps libre.</p>
+                        <p>I have done my 3 High School years in the Lycée George Sand while practicing swimming, guitar lessons, 
+                            art history during my spare time.</p>
                     </div>
                     <img src="https://pbs.twimg.com/profile_images/468457654491172864/mwqAYWGs_400x400.png" class="img-fluid logo" style="height: 80px;">
                 </div>
@@ -282,12 +282,12 @@
 
     <hr>
     <div class="container" id="skills">
-        <h1 class="display-3">Compétences</h1>
+        <h1 class="display-3">Skills</h1>
     </div>
 
 
     <div class="container">
-        <h3>Programmation</h1>
+        <h3>Programming</h1>
             <ul class="list-inline">
                 <li class="list-inline-item" data-toggle="tooltip" data-placement="top" title="C">
                     <i class="devicon-c-plain skill"></i>
@@ -333,7 +333,7 @@
             </ul>
     </div>
     <div class="container">
-        <h3>Outils</h1>
+        <h3>Tools</h1>
             <ul class="list-inline">
                 <li class="list-inline-item" data-toggle="tooltip" data-placement="top" title="Git">
                     <i class="devicon-git-plain skill"></i>
@@ -349,43 +349,42 @@
     </div>
 
     <div class="container" id="langues">
-        <h3>Langues</h3>
+        <h3>Languages</h3>
 
 
         <div class="row" style="margin-top:10px">
             <div class="col-lg-1">
-                <p class="lead">Français</p>
+                <p class="lead">French</p>
             </div>
             <div class="col-lg-11">
                 <div class="progress" style="margin-top: 5px">
-                    <div class="progress-bar" role="progressbar" style="width: 100%;">Langue Maternelle</div>
+                    <div class="progress-bar" role="progressbar" style="width: 100%;">Native</div>
                 </div>
             </div>
-
             <div class="col-lg-1">
                 <p class="lead">English</p>
             </div>
             <div class="col-lg-11">
                 <div class="progress" style="margin-top: 5px">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 90%;">Courant</div>
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 90%;">Fluent</div>
                 </div>
             </div>
 
             <div class="col-lg-1">
-                <p class="lead">Espagnol</p>
+                <p class="lead">Spanish</p>
             </div>
             <div class="col-lg-11">
                 <div class="progress" style="margin-top: 5px">
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 30%;">Quelques bases</div>
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 30%;">Some knowledge</div>
                 </div>
             </div>
 
             <div class="col-lg-1">
-                <p class="lead">Arabe Marocain</p>
+                <p class="lead">Moroccan Arabic</p>
             </div>
             <div class="col-lg-11">
                 <div class="progress" style="margin-top: 5px">
-                    <div class="progress-bar bg-danger" role="progressbar" style="width: 60%;">Intermédiaire</div>
+                    <div class="progress-bar bg-danger" role="progressbar" style="width: 60%;">Fair level</div>
                 </div>
             </div>
 
@@ -395,7 +394,7 @@
     <hr>
 
     <div class="container" id="projects">
-        <h1 class="display-3">Projets</h1>
+        <h1 class="display-3">Projects</h1>
     </div>
 
     <div class="container">
