--- a/en/index.html
+++ b/en/index.html
@@ -78,7 +78,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4" align="center">
-                        <img src="Ressources/images/profile-pic.jpg" class="profile-pic img-fluid">
+                        <img src="https://avatars1.githubusercontent.com/u/16744743?s=460&v=4" class="profile-pic img-fluid">
                     </div>
                     <div class="col-lg-8">
                         <div class="container" align="center">
