--- a/fr/index.html
+++ b/fr/index.html
@@ -103,8 +103,11 @@
                         <a href="https://www.linkedin.com/in/itsanas/" class="btn btn-dark btn-lg btn-circle" style="margin-right:30px;">
                             <i class="fab fa-linkedin-in fa-3x"></i>
                         </a>
-                        <a href="https://github.com/ItsAnas" class="btn btn-dark btn-lg btn-circle">
+                        <a href="https://github.com/ItsAnas" class="btn btn-dark btn-lg btn-circle" style="margin-right:30px;">
                             <i class="fab fa-github fa-3x"></i>
+                        </a>
+                        <a href="https://github.com/ItsAnas" class="btn btn-dark btn-lg">
+                            <i class="far fa-file-pdf fa-2x"> <div style="font-family: Roboto; display:inline">  Télécharger mon CV </div> </i>
                         </a>
                     </div>
                 </div>
