[ALL][RESSOURCE] Added pdf resume

--- a/fr/index.html
+++ b/fr/index.html
@@ -106,7 +106,7 @@
                         <a href="https://github.com/ItsAnas" class="btn btn-dark btn-lg btn-circle" style="margin-right:30px;">
                             <i class="fab fa-github fa-3x"></i>
                         </a>
-                        <a href="https://github.com/ItsAnas" class="btn btn-dark btn-lg">
+                        <a href="Ressources/pdf/cv_anas_fr.pdf" class="btn btn-dark btn-lg">
                             <i class="far fa-file-pdf fa-2x"> <div style="font-family: Roboto; display:inline">  Télécharger mon CV </div> </i>
                         </a>
                     </div>
@@ -114,82 +114,6 @@
             </div>
         </div>
     </div>
-
-
-    <!--
-    <!-- HTML HERE
-    <div class="container" style="border:2px solid blue;">
-
-        <!-- CONTENT
-        <div class="row" style="border:2px solid red;">
-            <div class="col-md-8 mb-4 animated bounceInRight">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet sem fermentum nulla sollicitudin,
-                    nec mollis mauris porttitor. Vivamus ut elementum justo. Vestibulum tristique mattis nibh, nec dignissim
-                    mauris cursus euismod. Aliquam erat volutpat. Nulla sodales erat eu sem euismod dapibus. Etiam vel accumsan
-                    orci, molestie venenatis ipsum. Etiam egestas venenatis lacinia. Sed tincidunt quam quam, id rutrum leo
-                    tempus in. Nam eu ullamcorper dui. Pellentesque consequat felis eu vehicula tempor. Duis commodo augue
-                    et volutpat pulvinar. Proin facilisis ultrices odio, a feugiat nisi dictum et. Nullam et quam ac ligula
-                    viverra rutrum ac non metus. Cras semper semper lectus.</p>
-            </div>
-            <div class="col-md-4 mb-4 animated bounceInLeft">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet sem fermentum nulla sollicitudin,
-                    nec mollis mauris porttitor. Vivamus ut elementum justo. Vestibulum tristique mattis nibh, nec dignissim
-                    mauris cursus euismod. Aliquam erat volutpat. Nulla sodales erat eu sem euismod dapibus. Etiam vel accumsan
-                    orci, molestie venenatis ipsum. Etiam egestas venenatis lacinia. Sed tincidunt quam quam, id rutrum leo
-                    tempus in. Nam eu ullamcorper dui. Pellentesque consequat felis eu vehicula tempor. Duis commodo augue
-                    et volutpat pulvinar. Proin facilisis ultrices odio, a feugiat nisi dictum et. Nullam et quam ac ligula
-                    viverra rutrum ac non metus. Cras semper semper lectus.</p>
-
-            </div>
-        </div>
-    </div>
--->
-
-
-
-    <!-- 
-    <div class="container animated bounceInRight">
-        <div class="timeline">
-            <div class="tcontainer tleft">
-                <div class="tcontent">
-                    <h2>2017</h2>
-                    <p class="lead">Semestre sabbatique consacré à divers projets personnels dont le premier Hackathon Facebook ou encore
-                        le semi-Marathon de Paris</p>
-                        <button class="btn btn-warning btn-lg btn-circle" data-toggle="tooltip" data-placement="bottom" title="Hooray!" style="margin-right:30px;">
-                                <i class="fas circless fa-heart fa-3x" style="color:red;"></i>
-                        </button>
-                    
-                </div>
-            </div>
-            <div class="tcontainer tright">
-                <div class="tcontent">
-                    <h2>2018</h2>
-                    <p>Lorem ipsum..</p>
-
-                    <button class="btn btn-info btn-lg btn-circle" data-toggle="tooltip" data-placement="bottom" title="Hooray!" style="margin-right:30px;">
-                            <i class="fas circless fa-briefcase fa-3x" style="color:purple"></i>
-                    </button>
-                </div>
-            </div>
-            <div class="tcontainer tleft">
-                <div class="tcontent">
-                    <h2>2017</h2>
-                    <p>Lorem ipsum..</p>
-                    <button class="btn btn-danger btn-lg btn-circle" data-toggle="tooltip" data-placement="bottom" title="Hooray!" style="margin-right:30px;">
-                            <i class="fas circless fa-graduation-cap fa-3x" style="color:yellow"></i>
-                    </button>
-                </div>
-            </div>
-            <div class="tcontainer tright">
-                <div class="tcontent">
-                    <h2>2016</h2>
-                    <p>Lorem ipsum..</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    -->
 
     <hr>
 
