--- a/en/index.html
+++ b/en/index.html
@@ -111,7 +111,7 @@
                         <a href="https://github.com/ItsAnas" class="btn btn-dark btn-lg btn-circle" style="margin-right:30px;">
                             <i class="fab fa-github fa-3x"></i>
                         </a>
-                        <a href="https://github.com/ItsAnas" class="btn btn-dark btn-lg">
+                        <a href="Ressources/pdf/cv_anas_en.pdf" class="btn btn-dark btn-lg">
                             <i class="far fa-file-pdf fa-2x"> <div style="font-family: Roboto; display:inline">  Download my Resume </div> </i>
                         </a>
                     </div>
