[ALL] Made resume button responsive

--- a/fr/index.html
+++ b/fr/index.html
@@ -100,15 +100,15 @@
                                 Permis B
                             </li>
                         </ul>
-                        <a href="https://www.linkedin.com/in/itsanas/" class="btn btn-dark btn-lg btn-circle" style="margin-right:30px;">
+                        <a href="https://www.linkedin.com/in/itsanas/" class="btn btn-dark btn-lg btn-circle btn-liink">
                             <i class="fab fa-linkedin-in fa-3x"></i>
                         </a>
-                        <a href="https://github.com/ItsAnas" class="btn btn-dark btn-lg btn-circle" style="margin-right:30px;">
+                        <a href="https://github.com/ItsAnas" class="btn btn-dark btn-lg btn-circle btn-liink">
                             <i class="fab fa-github fa-3x"></i>
                         </a>
                         <a href="Ressources/pdf/cv_anas_fr.pdf" class="btn btn-dark btn-lg">
                             <i class="far fa-file-pdf fa-2x">
-                                <div style="font-family: Roboto; display:inline"> Télécharger mon CV </div>
+                                <div class="cv_class" > Télécharger mon CV </div>
                             </i>
                         </a>
                     </div>
@@ -371,56 +371,7 @@
 
 
 
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6" style="margin-top:10px">
-                <div class="card shadover">
-                    <div class="card-body">
-                        <h4 class="card-title">En cours - Ecole d'ingenieur en informatique</h4>
-                        <div class="row">
-                            <div class="col-lg-2">
-                                <img src="http://blogs.ionis-group.com/epita/media/epita_nouveau_logo_identite_visuelle_innovation_ecole_informatique_30ans_01.jpg"
-                                    class="img-fluid logo" style="display:inline">
-                            </div>
-                            <div class="col-lg-10">
-                                <p class="card-text">Formation d'ingénieur de 5 ans avec 2 ans de prépa intégré.</p>
-                            </div>
-                        </div>
-                        <div id="school1" class="collapse">
-                            <p>Actuellement en formation au sein de l'EPITA, je participe pleinement à la vie active de
-                                l'école
-                                grâce aux associations tout en travaillant sur les projets scolaires qui me sont
-                                donnés.
-                                J'ai
-                                été membre du club de basket de l'école ainsi que responsable court-métrage mais cela
-                                ne
-                                m'a
-                                pas emêcher de réaliser les projets scolaires dont l'un d'eux sélectionné par le jury
-                                pour
-                                représenter
-                                l'école lors d’événements.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                            <span class="badge badge-warning">Personnel</span>
-                            <span class="badge badge-info">Unity</span>
-                            <span class="badge badge-info">C#</span>
-                            <span class="badge badge-info">Android</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6" style="margin-top:10px">
-                Wesh
-            </div>
-            <div class="col-lg-6" style="margin-top:10px">
-                coucou
-            </div>
-            <div class="col-lg-6" style="margin-top:10px">
-                salut
-            </div>
-
-
+   
 
 
 
