--- a/en/index.html
+++ b/en/index.html
@@ -105,14 +105,14 @@
                                 Driving license (B)
                             </li>
                         </ul>
-                        <a href="https://www.linkedin.com/in/itsanas/" class="btn btn-dark btn-lg btn-circle" style="margin-right:30px;">
+                        <a href="https://www.linkedin.com/in/itsanas/" class="btn btn-dark btn-lg btn-circle btn-liink" style="margin-right:30px;">
                             <i class="fab fa-linkedin-in fa-3x"></i>
                         </a>
-                        <a href="https://github.com/ItsAnas" class="btn btn-dark btn-lg btn-circle" style="margin-right:30px;">
+                        <a href="https://github.com/ItsAnas" class="btn btn-dark btn-lg btn-circle btn-liink" style="margin-right:30px;">
                             <i class="fab fa-github fa-3x"></i>
                         </a>
                         <a href="Ressources/pdf/cv_anas_en.pdf" class="btn btn-dark btn-lg">
-                            <i class="far fa-file-pdf fa-2x"> <div style="font-family: Roboto; display:inline">  Download my Resume </div> </i>
+                            <i class="far fa-file-pdf fa-2x"> <div class="cv_class">  Download my Resume </div> </i>
                         </a>
                     </div>
                 </div>
@@ -208,7 +208,7 @@
 
                 <div class="card-body">
                     <h4 class="card-title">2017 - Griffith College University of Dublin </h4>
-                    <p class="card-text">Echange international</p>
+                    <p class="card-text">International exchange</p>
                     <div id="schoogriffith" class="collapse">
                         <p>I have studied for 5 months in Griffith College University of Dublin with mathematics,
                             operating system and android courses.
